Fix rpm install on EL8
with the new dci-centos-7 nodepool image we can install psycopg2
directly. We also need to remove the VIRTUALENV_PIP fixed version in
order to make the tox job to work.

Change-Id: Iefe7ce5913d41044679c6c4ec5f744ef55f165a3
Depends-On: I4f8d85d83e25a21a40a50287db67400e3a4d8c4b

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2-binary  # ignore: use latest version of psycopg2 to avoid building it during pip install (python-psycopg2-2.5.1-4.el7.x86_64)
+psycopg2  # ignore: use latest version of psycopg2 to avoid building it during pip install (python-psycopg2-2.5.1-4.el7.x86_64)
 pyopenssl  # ignore: openssl 1.0.2k doesn't exist on pypi (openssl-1.0.2k-21.el7_9.x86_64)
 cryptography  # ignore: use latest version of cryptography to avoid building it during pip install (python2-cryptography-2.1.4-2.el7.x86_64)
 alembic==0.9.7  # python2-alembic-0.9.7-1.el7.noarch
