--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pyjwt==1.6.1  # python2-jwt-1.6.1-1.el7.noarch
 flask==1.0.2  # python2-flask-1.0.2-1.el7.noarch
 passlib==1.7.1  # python2-passlib-1.7.1-1.el7.noarch
 dciauth  # ignore: package from dci use the latest version
+python-qpid-proton==0.34.0
 dci-umb  # ignore: package from dci use the latest version
 SQLAlchemy-Utils==0.31.3  # python-sqlalchemy-utils-0.31.3-2.el7.centos.noarch
 pyzmq==14.3.1  # python2-zmq-14.7.0-11.el7.x86_64
