--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
-psycopg2  # ignore: use latest version of psycopg2 to avoid building it during pip install (python-psycopg2-2.5.1-4.el7.x86_64)
-pyopenssl  # ignore: openssl 1.0.2k doesn't exist on pypi (openssl-1.0.2k-21.el7_9.x86_64)
-cryptography  # ignore: use latest version of cryptography to avoid building it during pip install (python2-cryptography-2.1.4-2.el7.x86_64)
-alembic==0.9.7  # python2-alembic-0.9.7-1.el7.noarch
-six==1.11.0  # python2-six-1.11.0-4.el7.noarch
-SQLAlchemy==1.2.7  # python2-sqlalchemy-1.2.7-1.el7.x86_64
-requests==2.19.1  # python2-requests-2.19.1-4.el7.noarch
-pytz==2016.10  # pytz-2016.10-2.el7.noarch
-pyjwt==1.6.1  # python2-jwt-1.6.1-1.el7.noarch
-flask==1.0.2  # python2-flask-1.0.2-1.el7.noarch
-passlib==1.7.1  # python2-passlib-1.7.1-1.el7.noarch
+pyjwt==1.6.1  # python-jwt-1.6.1-2.el8.src.rpm baseos
+cryptography==3.2.1  # python-cryptography-3.2.1-5.el8.src.rpm baseos
+
+pytz==2017.2  # pytz-2017.2-9.el8.src.rpm appstream
+psycopg2==2.7.5  # python-psycopg2-2.7.5-7.el8.src.rpm appstream
+pyOpenSSL==19.0.0  # pyOpenSSL-19.0.0-1.el8.src.rpm appstream
+jsonschema==2.6.0  # python-jsonschema-2.6.0-4.el8.src.rpm appstream
+SQLAlchemy==1.3.2  # python-sqlalchemy-1.3.2-2.module_el8.5.0+761+faacb0fb.src.rpm appstream
+
+alembic==1.3.1  # python-alembic-1.3.1-1.el8.src.rpm centos-openstack-train
+six==1.14.0  # python-six-1.14.0-2.el8.src.rpm centos-openstack-train
+requests==2.22.0  # python-requests-2.22.0-7.el8.src.rpm centos-openstack-train
+flask==1.1.1  # python-flask-1.1.1-1.el8.src.rpm centos-openstack-train
+SQLAlchemy-Utils==0.34.2  # python-sqlalchemy-utils-0.34.2-2.el8.src.rpm centos-openstack-train
+python-keystoneclient==3.21.0  # python-keystoneclient-3.21.0-2.el8.src.rpm centos-openstack-train
+python-swiftclient==3.8.1  # python-swiftclient-3.8.1-1.el8.src.rpm centos-openstack-train
+
+passlib==1.7.2  # python-passlib-1.7.2-1.el8.src.rpm epel
+python-qpid-proton==0.35.0 # qpid-proton-0.35.0-2.el8.src.rpm epel
+pyzmq==19.0.0  # python-zmq-19.0.0-1.el8.src.rpm epel
+
 dciauth  # ignore: package from dci use the latest version
-python-qpid-proton==0.34.0
 dci-umb  # ignore: package from dci use the latest version
-SQLAlchemy-Utils==0.31.3  # python-sqlalchemy-utils-0.31.3-2.el7.centos.noarch
-pyzmq==14.3.1  # python2-zmq-14.7.0-11.el7.x86_64
-python-keystoneclient==3.17.0  # python2-keystoneclient-3.17.0-1.el7.noarch
-python-swiftclient==3.6.1  # python2-swiftclient-3.6.1-1.el7.noarch
-jsonschema==2.6.0  # python2-jsonschema-2.6.0-2.el7.noarch
