--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = pep8,py27,py36
+envlist = pep8,py36
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
@@ -15,11 +15,6 @@ whitelist_externals =
     sh
 commands =
     sh ./scripts/start_db.sh
-
-[testenv:py27]
-commands =
-    {[testenv]commands}
-    py.test -vvv {posargs: tests}
 
 [testenv:py36]
 commands =
