--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,6 @@ commands =
 [flake8]
 max-line-length = 160
 ignore = H405,H304,H104,E402,E129,E722,W605,W504,W503,E501
-exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc
+exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc,venv
 show-source = True
 builtins = long
