Implementation of s3 store
Change-Id: I879a28036366c01dbe1cb23e865ae78cbd5390fd
Depends-On: https://softwarefactory-project.io/r/c/dci-jobs/+/25576
Depends-On: https://softwarefactory-project.io/r/c/dci-infra-data-ci/+/25553

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,7 @@ passlib==1.7.2  # python-passlib-1.7.2-1.el8.src.rpm epel
 python-qpid-proton==0.35.0 # qpid-proton-0.35.0-2.el8.src.rpm epel
 pyzmq==19.0.0  # python-zmq-19.0.0-1.el8.src.rpm epel
 
+boto3==1.15.15  # python3-boto3-1.15.15-1.el8.src.rpm epel
+
 dciauth  # ignore: package from dci use the latest version
 dci-umb  # ignore: package from dci use the latest version
