add a query language
Change-Id: Ic522ef38e56fbdc79ffa0fd747375cc77235a50d

--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,9 @@ commands =
     flake8
 
 [flake8]
+# E203: whitespace before ':'
 max-line-length = 160
-ignore = H405,H304,H104,E402,E129,E722,W605,W504,W503,E501
+ignore = H405,H304,H104,E402,E129,E722,W605,W504,W503,E501,E203
 exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc,venv
 show-source = True
 builtins = long
