--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ install_command = pip install -U {packages}
 setenv =
     DCI_SETTINGS_MODULE = tests.settings
 norecursedirs = .git docs bin scripts
-passenv= PYTHONPATH DISABLE_DB_START DB_HOST
+passenv= *
 usedevelop = True
 whitelist_externals =
     sh
