--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps = -r{toxinidir}/requirements.txt
 install_command = pip install -U {packages}
 setenv =
     DCI_SETTINGS_MODULE = tests.settings
+    TZ = UTC
 norecursedirs = .git docs bin scripts
 passenv= *
 usedevelop = True
