--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ cryptography==3.2.1  # python-cryptography-3.2.1-5.el8.src.rpm baseos
 pyparsing==2.1.10  # pyparsing-2.1.10-7.el8.src.rpm baseos
 
 pytz==2017.2  # pytz-2017.2-9.el8.src.rpm appstream
-psycopg2==2.7.5  # python-psycopg2-2.7.5-7.el8.src.rpm appstream
+psycopg2==2.7.5;python_version<="3.6"  # python-psycopg2-2.7.5-7.el8.src.rpm appstream
+psycopg2-binary;python_version>"3.6"
 pyOpenSSL==19.0.0  # pyOpenSSL-19.0.0-1.el8.src.rpm appstream
 jsonschema==2.6.0  # python-jsonschema-2.6.0-4.el8.src.rpm appstream
 SQLAlchemy==1.3.2  # python-sqlalchemy-1.3.2-2.module_el8.5.0+761+faacb0fb.src.rpm appstream
@@ -12,12 +13,19 @@ alembic==1.3.1  # python-alembic-1.3.1-1.el8.src.rpm centos-openstack-train
 six==1.14.0  # python-six-1.14.0-2.el8.src.rpm centos-openstack-train
 requests==2.22.0  # python-requests-2.22.0-7.el8.src.rpm centos-openstack-train
 gunicorn
+
 flask==1.1.1  # python-flask-1.1.1-1.el8.src.rpm centos-openstack-train
+jinja2==2.10.1  # python3-jinja2-2.10.1-5.el8_10.noarch
+markupsafe==0.23  # python3-markupsafe-0.23-19.el8.x86_64
+itsdangerous==0.24  # python3-itsdangerous-0.24-14.el8.noarch
+werkzeug==0.16.0  # python3-werkzeug-0.16.0-1.el8.noarch
+
 SQLAlchemy-Utils==0.34.2  # python-sqlalchemy-utils-0.34.2-2.el8.src.rpm centos-openstack-train
 
 passlib==1.7.2  # python-passlib-1.7.2-1.el8.src.rpm epel
 python-qpid-proton==0.35.0  # qpid-proton-0.35.0-2.el8.src.rpm epel
-pyzmq==19.0.0  # python-zmq-19.0.0-1.el8.src.rpm epel
+pyzmq==19.0.0;python_version<="3.6"  # python-zmq-19.0.0-1.el8.src.rpm epel
+pyzmq;python_version>"3.6"
 
 boto3==1.15.15  # python3-boto3-1.15.15-1.el8.src.rpm epel
 
