--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pyparsing==2.1.10  # pyparsing-2.1.10-7.el8.src.rpm baseos
 pytz==2017.2  # pytz-2017.2-9.el8.src.rpm appstream
 psycopg2==2.7.5;python_version<="3.6"  # python-psycopg2-2.7.5-7.el8.src.rpm appstream
 psycopg2-binary;python_version>"3.6"
+psycogreen
 pyOpenSSL==19.0.0  # pyOpenSSL-19.0.0-1.el8.src.rpm appstream
 jsonschema==2.6.0  # python-jsonschema-2.6.0-4.el8.src.rpm appstream
 SQLAlchemy==1.3.2  # python-sqlalchemy-1.3.2-2.module_el8.5.0+761+faacb0fb.src.rpm appstream
@@ -12,7 +13,7 @@ SQLAlchemy==1.3.2  # python-sqlalchemy-1.3.2-2.module_el8.5.0+761+faacb0fb.src.r
 alembic==1.3.1  # python-alembic-1.3.1-1.el8.src.rpm centos-openstack-train
 six==1.14.0  # python-six-1.14.0-2.el8.src.rpm centos-openstack-train
 requests==2.22.0  # python-requests-2.22.0-7.el8.src.rpm centos-openstack-train
-gunicorn
+gunicorn[gevent]
 
 flask==1.1.1  # python-flask-1.1.1-1.el8.src.rpm centos-openstack-train
 jinja2==2.10.1  # python3-jinja2-2.10.1-5.el8_10.noarch
