--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 [flake8]
 # E203: whitespace before ':'
 max-line-length = 160
-ignore = H405,H304,H104,E402,E129,E722,W605,W504,W503,E501,E203
+ignore = H405,H304,H104,E402,E129,E722,W605,W504,W503,E501,E203,E721
 exclude=.venv,.git,.tox,dist,*egg,*.egg-info,build,examples,doc,venv
 show-source = True
 builtins = long
