--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ SQLAlchemy==1.3.2  # python-sqlalchemy-1.3.2-2.module_el8.5.0+761+faacb0fb.src.r
 
 alembic==1.3.1  # python-alembic-1.3.1-1.el8.src.rpm centos-openstack-train
 six==1.14.0  # python-six-1.14.0-2.el8.src.rpm centos-openstack-train
-requests==2.22.0  # python-requests-2.22.0-7.el8.src.rpm centos-openstack-train
+requests>=2.27.0, <3.0
 gunicorn[gevent]
 
 flask==1.1.1  # python-flask-1.1.1-1.el8.src.rpm centos-openstack-train
