Replace whitelist_externals with allowlist_externals to fix tox with more recent version
Change-Id: If51237a94df40d04d5f4bb1c05491cbf33dc4c0a

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 norecursedirs = .git docs bin scripts
 passenv= *
 usedevelop = True
-whitelist_externals =
+allowlist_externals =
     sh
 commands =
     sh ./scripts/start_db.sh
